# defleece

./: .gitmodules  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  defleece.cpp  defleece.out
.github/workflows/: defleece-build.yml
cmake/: platform_linux.cmake  platform_win.cmake
